logs/gtwpy.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/greenlet'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet2-2.0.3.egg-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Compiling './lib/python3.5/site-packages/dateutil/easter.py'...
***   File "./lib/python3.5/site-packages/dateutil/easter.py", line 55
    raise ValueError, "invalid method"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dateutil/parser.py'...
***   File "./lib/python3.5/site-packages/dateutil/parser.py", line 158
    l.append("%s=%s" % (attr, `value`))
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dateutil/relativedelta.py'...
***   File "./lib/python3.5/site-packages/dateutil/relativedelta.py", line 118
    raise TypeError, "relativedelta only diffs datetime/date"
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dateutil/rrule.py'...
***   File "./lib/python3.5/site-packages/dateutil/rrule.py", line 55
    raise ValueError, "Can't create weekday with n == 0"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dateutil/tz.py'...
***   File "./lib/python3.5/site-packages/dateutil/tz.py", line 78
    `self._name`,
    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/gevent'...
Compiling './lib/python3.5/site-packages/gevent/_util_py2.py'...
***   File "./lib/python3.5/site-packages/gevent/_util_py2.py", line 7
    raise type, value, tb
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gevent/libev'...
Listing './lib/python3.5/site-packages/gevent-1.2.2.dist-info'...
Listing './lib/python3.5/site-packages/giftwrap'...
Listing './lib/python3.5/site-packages/giftwrap/exchanges'...
Listing './lib/python3.5/site-packages/giftwrap/test'...
Listing './lib/python3.5/site-packages/giftwrap-1.5.9.egg-info'...
Listing './lib/python3.5/site-packages/grabbag'...
Compiling './lib/python3.5/site-packages/grabbag/exception.py'...
***   File "./lib/python3.5/site-packages/grabbag/exception.py", line 25
    raise self, None, sys.exc_info()[2]
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/grabbag/test'...
Listing './lib/python3.5/site-packages/grabbag-0.12.1.egg-info'...
Listing './lib/python3.5/site-packages/greenlet-0.4.12.dist-info'...
Listing './lib/python3.5/site-packages/grequests-0.3.0.egg-info'...
Listing './lib/python3.5/site-packages/gtw'...
Listing './lib/python3.5/site-packages/gtw/test'...
Compiling './lib/python3.5/site-packages/gtw/test/test_organizer.py'...
***   File "./lib/python3.5/site-packages/gtw/test/test_organizer.py", line 107
    print w
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/gtwpy-1.3.10.egg-info'...
Listing './lib/python3.5/site-packages/linecache2'...
Listing './lib/python3.5/site-packages/linecache2/tests'...
Listing './lib/python3.5/site-packages/linecache2-1.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-1.5.egg-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/oreos'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/mimetools_choose_boundary'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests-0.10.8.egg-info'...
Listing './lib/python3.5/site-packages/sanetime'...
Listing './lib/python3.5/site-packages/sanetime/test'...
Listing './lib/python3.5/site-packages/sanetime-4.2.3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/traceback2'...
Listing './lib/python3.5/site-packages/traceback2/tests'...
Listing './lib/python3.5/site-packages/traceback2-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/unittest2'...
Listing './lib/python3.5/site-packages/unittest2/test'...
Listing './lib/python3.5/site-packages/unittest2-1.1.0.dist-info'...
Listing './lib/python3.5/site-packages/utils'...
Compiling './lib/python3.5/site-packages/utils/exception.py'...
***   File "./lib/python3.5/site-packages/utils/exception.py", line 25
    raise self, None, sys.exc_info()[2]
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/utils/test'...
Compiling './lib/python3.5/site-packages/utils/test/test_property.py'...
***   File "./lib/python3.5/site-packages/utils/test/test_property.py", line 43
    print "bye"
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/utilspy-0.11.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
